<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:padding="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="@dimen/margin_horizontal_dialog"
    android:id="@+id/finishDialog">
    <TextView
        android:id="@+id/titleFinishDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/title_finish_dialog"
        android:textColor="@color/amber_400"
        android:textSize="22sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/titleYourScoreFinishDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleFinishDialog"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/your_score"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/valYourScoreFinishDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleYourScoreFinishDialog"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/background_text_box_dialog"
        android:includeFontPadding="false"
        android:text="@string/default_score"
        android:textColor="@color/grey_50"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bestScoreFinishDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valYourScoreFinishDialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/your_best_score_finish_dialog"
        android:textColor="@color/orange_400"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGameAgainFinishDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bestScoreFinishDialog"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_button_finish_game"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/title_button_finish_dialog"
        android:textColor="@color/grey_50"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btnCloseFinishDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@null"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_close"
        app:tint="@color/red_100" />
</RelativeLayout>