<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cardScore"
        app:layout_constraintBottom_toBottomOf="@+id/cardScore"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:includeFontPadding="false"
        android:text="@string/header"
        android:textColor="#FAFAFA"
        android:textSize="32sp"/>
    <com.mohammadkk.simple2048.view.LinearRadius
        android:id="@+id/cardBestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:radiusCorner="8dp"
        app:backgroundColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/titleBestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/best_score"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/bestScoreVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:includeFontPadding="false"
            android:text="@string/default_score"
            android:textColor="#4CAF50"
            android:textSize="16sp"/>
    </com.mohammadkk.simple2048.view.LinearRadius>
    <com.mohammadkk.simple2048.view.LinearRadius
        android:id="@+id/cardScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardBestScore"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        android:orientation="vertical"
        app:radiusCorner="8dp"
        app:backgroundColor="@color/white"
        android:gravity="center">
        <TextView
            android:id="@+id/titleCurrentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/current_score"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/currentScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:includeFontPadding="false"
            android:text="@string/default_score"
            android:textColor="#4CAF50"
            android:textSize="16sp"/>
    </com.mohammadkk.simple2048.view.LinearRadius>
    <TextView
        android:id="@+id/scoreAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cardScore"
        app:layout_constraintEnd_toStartOf="@+id/cardScore"
        app:layout_constraintTop_toTopOf="@+id/cardScore"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/light_green_500"
        android:visibility="gone"/>
    <com.mohammadkk.simple2048.GameView
        android:id="@+id/gameView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardScore"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"/>
    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnUndoGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_reset"
            android:padding="8dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_undo"
            android:tooltipText="@string/undo_game"
            tools:targetApi="o"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnResetGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_reset"
            android:padding="8dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_refresh"
            android:tooltipText="@string/reset_game"
            tools:targetApi="o"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>